--- a/spring-data-elasticsearch/pom.xml
+++ b/spring-data-elasticsearch/pom.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>spring-boot-dubbo</groupId>
-  <artifactId>spring-boot-dubbo-consumer</artifactId>
+  <groupId>spring-boot-sample</groupId>
+  <artifactId>spring-data-elasticsearch</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <parent>
@@ -12,27 +13,18 @@
     <version>1.5.3.RELEASE</version>
   </parent>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-  </properties>
-
   <dependencies>
-    <!--依赖于容器 -->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.dubbo.springboot</groupId>
-      <artifactId>spring-boot-starter-dubbo</artifactId>
-      <version>1.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>springboot-dubbo-api</groupId>
-      <artifactId>springboot-dubbo-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+
   </dependencies>
 
   <build>
@@ -43,4 +35,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
