--- a/spring-boot-redis/pom.xml
+++ b/spring-boot-redis/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>spring-boot-starter-redis</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
